[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openexec-planner"
version = "0.1.0"
description = "AI Project Planning Engine - From Intent to Executable Task DAGs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "OpenExec Team", email = "hello@openexec.ai"}
]
keywords = [
    "ai", 
    "agents", 
    "planner", 
    "llm", 
    "planning", 
    "automation", 
    "dag", 
    "software-engineering", 
    "task-orchestration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
    "structlog>=23.0",
]

[project.urls]
Homepage = "https://openexec.ai"
Repository = "https://github.com/openexec/openexec-planner"
Documentation = "https://docs.openexec.ai"
Issues = "https://github.com/openexec/openexec-planner/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
all = [
    "openexec-planner[dev,llm]",
]

[project.scripts]
openexec-planner = "openexec_planner.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openexec_planner*"]

[tool.setuptools.package-data]
"openexec_planner" = ["*.j2", "*.json", "*.md"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=openexec_planner"

[tool.bandit]
skips = ["B101"]
