[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openexec-planner"
version = "0.1.8"
description = "AI Project Planning Engine - From Intent to Executable Task DAGs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "OpenExec Team", email = "hello@openexec.io"}
]
keywords = [
    "ai", 
    "agents", 
    "planner", 
    "llm", 
    "planning", 
    "automation", 
    "dag", 
    "software-engineering", 
    "task-orchestration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
    "structlog>=23.0",
]

[project.urls]
Homepage = "https://openexec.io"
Repository = "https://github.com/openexec/openexec-planner"
Documentation = "https://docs.openexec.io"
Issues = "https://github.com/openexec/openexec-planner/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
all = [
    "openexec-planner[dev,llm]",
]

[project.scripts]
openexec-planner = "openexec_planner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openexec_planner"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=openexec_planner"

[tool.bandit]
skips = ["B101"]
